--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <div style = "background-color: skyblue; width: 1150px">
             <p>평면파의 기본 개형은 y = C*exp(-jBz)야. <span style="color:orangered">전파상수(Propagation Constant)</span>에 해당하는 B에 새롭게 구한 복소유전율을 적용하면 평면파 식은 진동항과 감쇠항으로 나누어져.</p>
             <p>손실매질에서의 평면파 개형은 C*exp(-jBz)exp(-az)가 돼. 앞의 항은 진동(oscillation)하며, 뒤의 항은 감쇠(damping)하지.</p>
-            <p>따라서 손실 매질에서의 평면파는 포락선(Envelope)인 exp(-z), -exp(-z)를 따라 진동하며 z=0으로 수렴해.</p>
-            <p>어때 정말 쉽지?</p>
+            <p>따라서 손실 매질에서의 평면파는 포락선(Envelope)인 exp(-z), -exp(-z)를 따라 진동하며 x=0으로 수렴해.</p>
+            <p>어때 이해됐어? 정말 쉽지?</p>
         </div>
        
 
@@ -68,4 +68,5 @@
 
 </body>
 </html>
+
 
