--- a/index.html
+++ b/index.html
@@ -4,214 +4,121 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>4차시 리스트</title>
+    <title>Document</title>
     <style>
-        html,
-
-        body {
-            margin: 0;
-            padding: 0;
-            height: 100%
+        h1 {
+            background-color: lightgray;
         }
 
-        header {
-            width: 100%;
-            height: 10%;
-            background: lightgray;
-        }
-
-        section {
-            width: 60%;
-            height: 90%;
-            float: left;
-        }
-
-        aside {
-            width: 40%;
-            height: 90%;
-            float: left;
+        h3 {
+            background-color: lightgray;
         }
     </style>
 
 </head>
 
 <body>
-    <!-- 4주차 수업 내용: 리스트, 표 만들어보기 -->
 
-    <header>
-        <h1>표, 리스트 만들기</h1>
-    </header>
+    <div>
+        <h1>설문지</h1>
 
-    <!-- 1. 리스트 만들기 -->
+        <p>전기공학과 개선을 위해 간단한 설문조사에 참여해주세요.</p>
 
-    <section>
-
-        <h2>리스트 만들기</h2>
-
-        <!-- Ordered List -->
-
-        <p>동물들(기본 순)</p>
-        <ol>
-            <li>코알라</li>
-            <li>기린</li>
-            <li>타조</li>
-            <li>오리</li>
-        </ol>
-
-        <p>동물들(ABC 순)</p>
-        <ol type="A">
-            <li>코알라</li>
-            <li>기린</li>
-            <li>타조</li>
-            <li>오리</li>
-        </ol>
-
-        <p>동물들(로마자 순)</p>
-        <ol type="I">
-            <li>코알라</li>
-            <li>기린</li>
-            <li>타조</li>
-            <li>오리</li>
-        </ol>
+        <hr>
 
 
-        <!-- Unordered List -->
+        학과 <input type="radio" checked>전기공학과
+        <br>
+        <br>
 
-        <p>동물들(순서 없음)</p>
-        <ul>
-            <li>코알라</li>
-            <li>기린</li>
-            <li>타조</li>
-            <li>오리</li>
-        </ul>
+        <label for="studentnumber">학번 <input type="text" id="studentnumber" placeholder="9자리 입력"></label>
 
+        <br>
+        <br>
 
-        <!-- Definition List -->
+        학년 <input type="radio" name="grade" value="1_grade">1학년 <input type="radio" name="grade" value="2_grade">2학년
+        <input type="radio" name="grade" value="3_grade">3학년 <input type="radio" name="grade" value="4_grade">4학년
 
-        <p>동물들의 특징</p>
-        <dl>
-            <dt>코알라</dt>
-            <dd>코알라는 유칼립투스 잎을 주식으로 먹는데, 많은 수면을 통해 잎에 포함된 알코올 성분을 해독한다.</dd>
-            <dt>타조</dt>
-            <dd>타조는 날 수 없다.</dd>
-        </dl>
-    </section>
+        <br>
+        <br>
 
+        성별 <input type="radio" name="gender" value="man">남 <input type="radio" name="gender" value="woman">여
 
-    <!-- 2. 표 만들기 -->
+        <br>
+        <hr>
 
-    <aisde>
+        <h3>1. 들었던 강의 중 인상 깊었던 강의를 모두 골라주세요.</h3>
 
-        <h2>표 만들기</h2>
+        <input type="checkbox" name="class" value="1">전기회로 <input type="checkbox" name="class" value="2">공업수학 <input
+            type="checkbox" name="class" value="3">전자기학
+        <br>
+        <input type="checkbox" name="class" value="4">전기설계 <input type="checkbox" name="class" value="5">제어공학 <input
+            type="checkbox" name="class" value="6">전동기제어
+        <br>
+        <input type="checkbox" name="class" value="7">수치해석 <input type="checkbox" name="class" value="8">선형대수 <input
+            type="checkbox" name="class" value="9">전자에너지변환
 
-        <table border="1">
-            <caption>학교 교실 현황</caption>
-            <thead>
-                <tr>
-                    <th>학년</th>
-                    <th>1반</th>
-                    <th>2반</th>
-                    <th>3반</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1학년</td>
-                    <td>1-1</td>
-                    <td>1-2</td>
-                    <td>1-3</td>
-                </tr>
-                <tr>
-                    <td>2학년</td>
-                    <td>2-1</td>
-                    <td>2-2</td>
-                    <td>2-3</td>
-                </tr>
-                <tr>
-                    <td>3학년</td>
-                    <td>3-1</td>
-                    <td>3-2</td>
-                    <td>3-3</td>
-                </tr>
-            </tbody>
-        </table>
+        <br>
+        <hr>
 
-        <p></p>
-
-        <table border="1">
-            <caption>상반기 달별 요일 수</caption>
-            <thead>
-                <tr>
-                    <th style="text-align:right">월</th>
-                    <td>1월</td>
-                    <td>2월</td>
-                    <td>3월</td>
-                    <td>4월</td>
-                    <td>5월</td>
-                    <td>6월</td>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th style="text-align:right">요일수</th>
-                    <td>31</td>
-                    <td>28</td>
-                    <td>31</td>
-                    <td>30</td>
-                    <td>31</td>
-                    <td>30</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <p></p>
-
-        <table border="1" style="width: 15%; text-align: right">
-            <tr style="height: 70px; background-color: beige">
-                <th>Month</th>
-                <th>Day</th>
-                <th>Savings</th>
-            </tr>
-
-            <tr>
-                <td>January</td>
-                <td>1</td>
-                <td>$100</td>
-            </tr>
-
-            <tr>
-                <td>February</td>
-                <td>5</td>
-                <td rowspan="2">$80</td>
-            </tr>
-
-            <tr>
-                <td>March</td>
-                <td>3</td>
-            </tr>
+        <h3>2. 관심있는 분야를 하나만 선택해주세요.</h3>
 
 
-        </table>
+        <input type="radio" name="area" value="a">전자기응용분야 <input type="radio" name="area" value="b">자동화제어분야<input
+            type="radio" name="area" value="c">전동기제어분야
+        <br>
+        <input type="radio" name="area" value="d">그리드해석분야 <input type="radio" name="area" value="e">재생에너지분야<input
+            type="radio" name="area" value="f">전기재료분야
 
-        <table border="1" style="width: 15%; text-align: right">
-            <caption>동물들</caption>
-            <tbody>
-                <tr>
-                    <td><img src="image/기린.jpg" width="120" height="100"></td>
-                    <td><img src="image/코알라.jpeg" width="120" height="100"></td>
-                    <td><img src="image/타조.jpg" width="120" height="100"></td>
-                </tr>
-            </tbody>
-        </table>
+        <br>
+        <hr>
 
+        <h3>3. 전기공학과에 바라는 것들을 적어주세요.</h3>
 
-        </aside>
+        <textarea rows="3" cols="100" placeholder="300자 이내로 적어주세요"></textarea>
+
+        <br>
+        <hr>
+        설문에 참여해 주셔서 감사합니다. 연락처와 이메일을 남겨주시면 추첨을 통해 아메리카노 기프티콘을 보내드립니다.
+
+        <br>
+        <p>
+            연락처:
+            <select>
+                <option value="010">010</option>
+                <option value="011">011</option>
+                <option value="017">017</option>
+            </select>
+            -
+            <input type="text" size="2">
+            -
+            <input type="text" size="2">
+        </p>
+
+        <p>
+            이메일:
+            <input type="text" size="10">
+            @
+            <select>
+                <option value="">- - - 선택 - - -</option>
+                <option value="naver">naver.com</option>
+                <option value="daum">daum.net</option>
+                <option value="kakao">kakao.com</option>
+                <option value="cnu">o.cnu.ac.kr</option>
+            </select>
+        </p>
+
+        <hr>
+
+        <p>
+            <label for="sign"><input type="checkbox" id="sign"> 개인정보 수집 및 이용에 동의합니다 </label>
+            <label for="sign"><input type="checkbox" id="sign"> 전기공학과의 다양한 소식을 SNS로 받습니다 </label>
+        </p>
+
+        <input type="submit">
+    </div>
 
 
 </body>
 
 </html>
-
-
-
-
