--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
         <p>
             <label for="sign"><input type="checkbox" id="sign"> 개인정보 수집 및 이용에 동의합니다 </label>
-            <label for="sign"><input type="checkbox" id="sign"> 전기공학과의 다양한 소식을 SNS로 받습니다 </label>
+            <label for="sns"><input type="checkbox" id="sns"> 전기공학과의 다양한 소식을 SNS로 받습니다 </label>
         </p>
 
         <input type="submit">
