--- a/index.html
+++ b/index.html
@@ -5,83 +5,94 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        h1 {
-            background-color: lightgray;
-        }
 
-        h3 {
-            background-color: lightgray;
-        }
-    </style>
+    <!-- 동적 페이지를 구성하기 위해 별도의 js 파일 연결 -->
+    <script src="main.js"></script>
 
+    <!-- 원활한 style 수정을 위해 별도의 css 파일 연결 -->
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
 
-    <div>
-        <h1>설문지</h1>
-
-        <p>전기공학과 개선을 위해 간단한 설문조사에 참여해주세요.</p>
-
-        <hr>
+    <!-- 본 페이지는 회로에 흔히 사용되는 다이오드의 원리를 이해하는 데 목적을 두었음. -->
 
 
-        학과 <input type="radio" checked>전기공학과
+    <header class="header">
+
+        <h1> 다이오드의 이해</h1>
+
+        <div id="identity">
+            <p>학과: 전기공학과 &nbsp;</p>
+            <p>학번: 201902052 &nbsp;</p>
+            <p>이름: 배진태 &nbsp;</p>
+
+        </div>
+    </header>
+
+    <div class="section">
+
+        <img src="image/diode2.jpg" alt="" width="400px">
+
+        <ul>
+            <li>본 사이트는 다이오드의 구조와 동작을 이해하기 위해 필요한 정보를 모아놓은 공간입니다.</li>
+            <li>각 항목을 클릭하면 관련 설명이 적혀있는 페이지로 이동합니다.</li>
+        </ul>
+
+
+    </div>
+
+    <div class="section" style="height: 50px">
+        <ul>
+            <li style="display : inline-block; margin-right: 30px" class="link-text" data-page="diode.html">1. 다이오드의 기능과
+                역할</li>
+            <li style="display : inline-block; margin-right: 30px" class="link-text" data-page="conductor.html">2. 도체 /
+                부도체 / 반도체의 차이</li>
+            <li style="display : inline-block; margin-right: 30px" class="link-text" data-page="carrier.html">3. p형 반도체와
+                n형 반도체</li>
+            <li style="display : inline-block; margin-right: 30px" class="link-text" data-page="pn_junction.html">4. p-n
+                접합 다이오드의 구조</li>
+            <li style="display : inline-block; margin-right: 30px" class="link-text" data-page="operation.html">5. 다이오드의
+                동작 원리</li>
+        </ul>
+    </div>
+
+    <div style="background-color: rgb(166, 226, 206); padding: 20px; border: 1px solid black">
+
+        <h3> 이 사이트를 찾아주신 분들께.. </h3>
+        아래의 간단한 설문에 참여해주시면 사이트의 개선에 정말 큰 도움이 됩니다.
+        <br>
+        설문에 참여한 인원 중 추첨을 통해 99street 아메리카노 기프티콘을 보내드립니다.
+        <br><br>
+
+        학년
+        <label for="opt1"><input type="radio" name="grade" value="1_grade" id="opt1">1학년</label>
+        <label for="opt2"><input type="radio" name="grade" value="2_grade" id="opt2">2학년</label>
+        <label for="opt3"><input type="radio" name="grade" value="3_grade" id="opt3">3학년</label>
+        <label for="opt4"><input type="radio" name="grade" value="4_grade" id="opt4">4학년</label>
+
+        <br><br>
+
+        본인 전공과의 관련 여부
+        <label for="opt5"><input type="radio" name="department" value="related" id="opt5">관련 있음 </label>
+        <label for="opt6"><input type="radio" name="department" value="unrelated" id="opt6">관련 없음</label>
+
+        <br><br>
+
+        사이트 평점
+        <label for="opt7"><input type="radio" name="score" value="1" id="opt7">1점</label>
+        <label for="opt8"><input type="radio" name="score" value="2" id="opt8">2점</label>
+        <label for="opt9"><input type="radio" name="score" value="3" id="opt9">3점</label>
+        <label for="opt10"><input type="radio" name="score" value="4" id="opt10">4점</label>
+        <label for="opt11"><input type="radio" name="score" value="5" id="opt11">5점</label>
+
         <br>
         <br>
 
-        <label for="studentnumber">학번 <input type="text" id="studentnumber" placeholder="9자리 입력"></label>
-
+        웹페이지 구성에 대한 건의사항이나 문의가 있다면 아래에 적어주시면 감사하겠습니다.
         <br>
-        <br>
-
-        학년 <input type="radio" name="grade" value="1_grade">1학년 <input type="radio" name="grade" value="2_grade">2학년
-        <input type="radio" name="grade" value="3_grade">3학년 <input type="radio" name="grade" value="4_grade">4학년
-
-        <br>
-        <br>
-
-        성별 <input type="radio" name="gender" value="man">남 <input type="radio" name="gender" value="woman">여
-
-        <br>
-        <hr>
-
-        <h3>1. 들었던 강의 중 인상 깊었던 강의를 모두 골라주세요.</h3>
-
-        <input type="checkbox" name="class" value="1">전기회로 <input type="checkbox" name="class" value="2">공업수학 <input
-            type="checkbox" name="class" value="3">전자기학
-        <br>
-        <input type="checkbox" name="class" value="4">전기설계 <input type="checkbox" name="class" value="5">제어공학 <input
-            type="checkbox" name="class" value="6">전동기제어
-        <br>
-        <input type="checkbox" name="class" value="7">수치해석 <input type="checkbox" name="class" value="8">선형대수 <input
-            type="checkbox" name="class" value="9">전자에너지변환
-
-        <br>
-        <hr>
-
-        <h3>2. 관심있는 분야를 하나만 선택해주세요.</h3>
-
-
-        <input type="radio" name="area" value="a">전자기응용분야 <input type="radio" name="area" value="b">자동화제어분야<input
-            type="radio" name="area" value="c">전동기제어분야
-        <br>
-        <input type="radio" name="area" value="d">그리드해석분야 <input type="radio" name="area" value="e">재생에너지분야<input
-            type="radio" name="area" value="f">전기재료분야
-
-        <br>
-        <hr>
-
-        <h3>3. 전기공학과에 바라는 것들을 적어주세요.</h3>
-
         <textarea rows="3" cols="100" placeholder="300자 이내로 적어주세요"></textarea>
 
-        <br>
-        <hr>
-        설문에 참여해 주셔서 감사합니다. 연락처와 이메일을 남겨주시면 추첨을 통해 아메리카노 기프티콘을 보내드립니다.
-
-        <br>
         <p>
             연락처:
             <select>
@@ -100,7 +111,7 @@
             <input type="text" size="10">
             @
             <select>
-                <option value="">- - - 선택 - - -</option>
+                <option value="">- - 직접 입력 - -</option>
                 <option value="naver">naver.com</option>
                 <option value="daum">daum.net</option>
                 <option value="kakao">kakao.com</option>
@@ -108,15 +119,16 @@
             </select>
         </p>
 
-        <hr>
-
         <p>
             <label for="sign"><input type="checkbox" id="sign"> 개인정보 수집 및 이용에 동의합니다 </label>
             <label for="sns"><input type="checkbox" id="sns"> 전기공학과의 다양한 소식을 SNS로 받습니다 </label>
         </p>
 
         <input type="submit">
+
     </div>
+
+
 
 
 </body>
