--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
                 <option value="017">017</option>
             </select>
             -
-            <input type="text" size="2">
+            <input type="text" size="2" maxlength="4">
             -
-            <input type="text" size="2">
+            <input type="text" size="2" maxlength="4">
         </p>
 
         <p>
