--- a/conductor.html
+++ b/conductor.html
@@ -35,7 +35,7 @@
 
 
         <div class="navigation_bottom">
-            <p class="link-text" data-page="main.html">메인화면으로 돌아가기</p>
+            <p class="link-text" data-page="index.html">메인화면으로 돌아가기</p>
         </div>
     </nav>
 
