--- a/index.html
+++ b/index.html
@@ -13,20 +13,17 @@
     <link rel="stylesheet" href="main.css">
 </head>
 
-<body>
+<body class = "body_sector">
 
     <!-- 본 페이지는 회로에 흔히 사용되는 다이오드의 원리를 이해하는 데 목적을 두었음. -->
 
 
-    <header class="header">
+    <header class="head">
 
         <h1> 다이오드의 이해</h1>
 
         <div id="identity">
-            <p>학과: 전기공학과 &nbsp;</p>
-            <p>학번: 201902052 &nbsp;</p>
-            <p>이름: 배진태 &nbsp;</p>
-
+            <p>전기공학과 / 201902052 / 배진태 &nbsp;</p>
         </div>
     </header>
 
@@ -111,7 +108,7 @@
             <input type="text" size="10">
             @
             <select>
-                <option value="">- - 직접 입력 - -</option>
+                <option value="">- - 선택 - -</option>
                 <option value="naver">naver.com</option>
                 <option value="daum">daum.net</option>
                 <option value="kakao">kakao.com</option>
